fixing bug overflow reverting back

--- a/reset.css
+++ b/reset.css
@@ -45,8 +45,6 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-html *{
-    overflow-x: hidden;
+html, body *{
 	font-family: sans-serif;
-	max-width: 100%;
 }
